# Docling_Rag2

./: .gitignore  README.md  cos_service.py  pyproject.toml  requirements.txt
bcbsks-rep-dashboard/: ANONYMOUS_CHAT_SETUP.md  ORCHESTRATE_EMBED_FIX.md  README.md  index.html  package-lock.json  package.json
bcbsks-rep-dashboard/src/: App.tsx  index.css
bcbsks-rep-dashboard/src/components/assistant/: ActionButtons.css  ActionButtons.tsx  AssistantPanel.css  AssistantPanel.tsx  CaseAssistant.css  CaseAssistant.tsx  SuggestedNextSteps.css  SuggestedNextSteps.tsx  orchestrateEmbed.tsx  orchestrateEmbed_backup.tsx
bcbsks-rep-dashboard/src/components/customer/: CaseDetails.css  CaseDetails.tsx  CaseHeader.css  CaseHeader.tsx  CaseMetadata.css  CaseMetadata.tsx  CustomerPanel.css  CustomerPanel.tsx
bcbsks-rep-dashboard/src/components/layout/: DashboardLayout.css  DashboardLayout.tsx  FloatingWXOButton.css  FloatingWXOButton.tsx
bcbsks-rep-dashboard/src/context/: CustomerContext.tsx
bcbsks-rep-dashboard/src/data/: mockCustomerData.ts
bcbsks-rep-dashboard/src/types/: customer.types.ts  orchestrate.types.ts
docling_deep_agent/: agent.py  chunker.py  parser.py  sandbox.py  store.py  subagents.py
docs/: PLAN_SUMMARY.md  component_hierarchy.md  implementation_plan.md  requirements.md  technical_specifications.md
